[gd_scene load_steps=8 format=2]

[ext_resource path="res://scripts/Locality/Kitchen3.gd" type="Script" id=1]
[ext_resource path="res://assets/People/s_mother.png" type="Texture" id=2]
[ext_resource path="res://scenes/Elements/s_trash_can.tscn" type="PackedScene" id=3]
[ext_resource path="res://scenes/Elements/s_radio.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/Elements/s_poele.tscn" type="PackedScene" id=5]
[ext_resource path="res://assets/Kitchen/SP_cuis_2.png" type="Texture" id=6]
[ext_resource path="res://assets/Kitchen/SP_cuis_2_fog.png" type="Texture" id=7]

[node name="Kitchen3" type="Control"]
margin_left = -1.71478
margin_right = -1.71478
script = ExtResource( 1 )

[node name="SpCuis2" type="Sprite" parent="."]
scale = Vector2( 0.533, 0.555572 )
texture = ExtResource( 6 )
centered = false

[node name="s_mother" type="Sprite" parent="."]
position = Vector2( 263.355, 389.668 )
scale = Vector2( 0.15, 0.15 )
texture = ExtResource( 2 )

[node name="s_radio" parent="." instance=ExtResource( 4 )]
position = Vector2( 407.705, 323.148 )

[node name="s_trash_can" parent="." instance=ExtResource( 3 )]
position = Vector2( 732.741, 525.74 )

[node name="s_poele" parent="." instance=ExtResource( 5 )]
position = Vector2( 654.715, 389 )

[node name="SpCuis2Fog" type="Sprite" parent="."]
scale = Vector2( 0.533, 0.555572 )
texture = ExtResource( 7 )
centered = false
